styles/globals.css
@import 'bootstrap/dist/css/bootstrap.css';

html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

body {
  background-color: #88effd;
}

img[id^="profile-image-"] {
  width: 100px;  /* Adjust as needed */
  height: 100px; /* Adjust as needed */
}

